2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncManager.cs, Tomboy/FileSystemSyncServer.cs,
	  Tomboy/Preferences.cs: Adding TransactionID guid to the lock file,
	  unique for each attempted transaction with the server.  Renaming
	  LockOwner to ClientId; note that the ClientId can be changed by the
	  user and is not guaranteed to be unique.

2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Note.cs: Check for null before acting on buffer (Note may not
	  have been opened yet).

2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncManager.cs, Tomboy/RemoteControl.cs, Tomboy/Note.cs: New
	  Note.LoadForeignNoteXml method, used by sync and
	  RemoteControl.SetNoteContentsCompleteXml.

2007-06-27  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncDialog.cs: Stubbed in a Synchronize Now button.
	* Tomboy/SyncManager.cs: Get the SyncDialog from the Tomboy class.
	* Tomboy/Tomboy.cs: Create and expose the SyncDialog.
	* Tomboy/NoteWindow.cs: Removed "Synchronize Notes" from the Tools
	  menu.
	* Tomboy/ActionManager.cs, data/UIManagerLayout.xml: Added
	  NoteSynchronizationAction.

2007-06-27  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncManager.cs: Added in descriptive status messages (which
	  we'll need to change later) for the sync dialog.  Also added code
	  to add status messages about files that come from the client.
	* Tomboy/Note.cs: Changed the default revision on a new note to be -1. 
	  -1 signifies that a note has never been synchronized.

2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/FileSystemSyncServer.cs: Extrated AdjustPermissions method. 
	  Setting permissions on parent directory when necessary.

2007-06-27  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/FileSystemSyncServer.cs: Removing old code that was commented
	  out.

2007-06-26  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncManager.cs: Added Revision to the lock file though I'm not